--- a/styles/globals.css
+++ b/styles/globals.css
@@ -28,7 +28,7 @@ section {
 
 footer {
   color: #fff;
-  position: fixed;
+  position: relative;
   bottom: 0;
   padding: 2rem;
 }
@@ -37,4 +37,81 @@ h1 {
   font-size: 2rem;
   font-weight: 700;
   margin-bottom: 1rem;
+}
+
+.cover {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 1rem;
+  width: 100vw;
+  height: 100vh;
+  background: linear-gradient(
+    to bottom right,
+    grey,
+    rgba(var(--background-start-rgb), 0.8),
+
+  );
+}
+
+.cover img {
+  margin: 1rem;
+  width: 50vw;
+  max-height: 70%;
+
+}
+
+.cover__content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 1rem;
+  width: 50vw;
+  padding: 1rem;
+  height: 100%;
+}
+
+.cover__content h1 {
+  font-size: 3rem;
+  font-weight: 700;
+  margin-bottom: 1rem;
+  color: #141313;
+}
+
+.fadeIn {
+  opacity: 0;
+  animation: fadeIn 1s ease-in-out forwards;
+  animation-delay: 1.5s;
+  animation-fill-mode: forwards;
+}
+
+.fadeInLeftToRight {
+  opacity: 0;
+  animation: fadeIn 1.5s ease-in-out forwards, slideIn 1s ease-in-out forwards;
+  animation-delay: 0.5s;
+  animation-fill-mode: forwards;
+  transform: translateX(-100%);
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes slideIn {
+  from {
+    transform: translateX(-100%);
+  }
+  to {
+    transform: translateX(0);
+  }
+}
+
+.w50{
+  width: 50%;
 }
