--- a/styles/globals.css
+++ b/styles/globals.css
@@ -22,13 +22,19 @@ html {
 
 body {
   min-height: 100vh;
-
 }
 
 section {
   display: grid;
   padding: 2rem;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+}
+
+section p{
+  font-size: 1.2rem;
+  font-weight: 400;
+  line-height: 1.5;
+  margin-bottom: 1rem;
 }
 
 footer {
@@ -44,6 +50,12 @@ h1 {
   margin-bottom: 1rem;
 }
 
+h2 {
+  font-size: 1.5rem;
+  font-weight: 700;
+  margin-bottom: 1rem;
+}
+
 .cover {
   display: flex;
   justify-content: flex-start;
@@ -55,8 +67,16 @@ h1 {
     to bottom right,
     grey,
     rgba(var(--background-start-rgb), 0.8),
-
   );
+}
+
+.cover p {
+  font-size: 1.2rem;
+  font-weight: 400;
+  line-height: 1.5;
+  margin-bottom: 1rem;
+  text-align: justify;
+  text-justify: inter-word;
 }
 
 .cover img {
