--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,12 +16,20 @@
   }
 }
 
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: 'Roboto', sans-serif;
+}
+
 html {
   scroll-behavior: smooth;
 }
 
 body {
   min-height: 100vh;
+  overflow-x: hidden;
 }
 
 section {
@@ -35,6 +43,11 @@ section p{
   font-weight: 400;
   line-height: 1.5;
   margin-bottom: 1rem;
+}
+
+section img {
+  margin: 1rem;
+  max-width: 45vw;
 }
 
 footer {
