--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,6 +6,7 @@
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
+  --gradient-purple: linear-gradient(to bottom right, grey, #7171ff)
 }
 
 @media (prefers-color-scheme: dark) {
@@ -38,6 +39,7 @@ section {
   align-items: center;
   padding: 2rem;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  height: 100vh;
 }
 
 section p{
@@ -56,10 +58,44 @@ footer {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   color: #fff;
+  background: var(--gradient-purple);
   position: relative;
   bottom: 0;
-  padding: 2rem;
+  padding: 5rem;
+  display: grid;
+  justify-items: center;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  border-radius: 100px 0 0 0;
+  font-size: 12px;
 }
+
+footer h3 {
+  font-size: 16px;
+  font-weight: 700;
+  margin-bottom: 1rem;
+}
+
+.grid-2{
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.grid-3{
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.grid-4{
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+}
+
+
+
+
+
+
+
 
 h1 {
   font-size: 2rem;
