--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,7 +6,9 @@
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
-  --gradient-purple: linear-gradient(to bottom right, grey, #7171ff)
+  --dark-blue: #1f2937;
+  --purple: #7272f0;
+  --gradient-purple: linear-gradient(to bottom right, var(--dark-blue), var(--purple));
 }
 
 @media (prefers-color-scheme: dark) {
@@ -72,6 +74,11 @@ footer {
 footer h3 {
   font-size: 16px;
   font-weight: 700;
+  margin-bottom: 1rem;
+}
+
+footer li {
+  list-style: none;
   margin-bottom: 1rem;
 }
 
